.provarCaches/00D6C0000000xA6UAI/objects/sked__Region_Area__c.object
<CustomObject>
    <description>Contains geographical data for a region</description>
    <fields>
        <fullName>sked__End__c</fullName>
        <label>End</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Region__c</fullName>
        <label>Region</label>
        <referenceTo>sked__Region__c</referenceTo>
        <relationshipLabel>Region Areas</relationshipLabel>
        <relationshipName>Region_Areas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Start__c</fullName>
        <label>Start</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Postcode</fullName>
                </value>
                <value>
                    <fullName>Suburb</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Region Area</label>
    <nameField>
        <displayFormat>RT-{0}</displayFormat>
        <label>Region Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>